# CoordPy

./: .gitignore  AGENT_IMPLEMENTATION_PROMPT.md  AGENT_NEXT_SPRINT_PROMPT.md  AGENT_SPRINT_3WEEK.md  ARCHITECTURE.md  BENCHMARK.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CONTEXT_SOLUTION_REVIEW.md  CONTRIBUTING.md  EXTENDED_MATH.md  EXTENDED_MATH_4.md  EXTENDED_MATH_5.md  EXTENDED_MATH_7.md  FRAMEWORK.md  LICENSE  MANIFEST.in  MVP.md  README.md  RELEASING.md  SECURITY.md  TEST_CLAUDE.md  VISION_MILLIONS.md  linear_github_mapping.json  pyproject.toml
coordpy/: __init__.py  __main__.py  _cli.py  _pretty.py  _version.py  adaptive_compression.py  agents.py  algorithm_state_trace_v1.py  analytical_bounds_v1.py  apps_executor_v1.py  apps_loader_v1.py  apps_reflexion_bench_v1.py  attention_steering_bridge_v11.py  attention_steering_bridge_v13.py  attention_steering_bridge_v2.py  attention_steering_bridge_v3.py  attention_steering_bridge_v4.py  attention_steering_bridge_v6.py  attention_steering_bridge_v8.py  attention_steering_bridge_v9.py  autograd_manifold.py  band_mechanism_bench_v1.py  bigcodebench_executor_v1.py  bounded_window_baseline_v3.py  branch_cycle_memory_v2.py  branch_merge_memory_v3.py  budget_enforced_composed_recovery_v1.py  budget_enforcement_v1.py  byzantine_fault_tolerance_v1.py  cache_controller_v10.py  cache_controller_v11.py  cache_controller_v12.py  cache_controller_v13.py  cache_controller_v14.py  cache_controller_v17.py  cache_controller_v18.py  cache_controller_v3.py  cache_controller_v4.py  cache_controller_v7.py  cache_controller_v8.py  (+527 more)
docker/: Dockerfile.coordpy-substrate  compose-w86-multi-host.yml
docs/: ARCHITECTURE_REQUIREMENTS_W138_V1.md  ARCHITECTURE_REQUIREMENTS_W139_V2.md  ARCHITECTURE_REQUIREMENTS_W142_V4.md  AUDIT_POST_W83_BLOCKERS.md  CAPSULE_FORMALISM.md  CAPSULE_TEAM_FORMALISM.md  COLAB_ENTERPRISE_RUNBOOK.md  COLAB_PRO_RUNBOOK.md  CONSOLIDATED_CODE_RETIREMENT_NARRATIVE_V1.md  CONTAMINATION_CONTROL_FRAMING_W109_V1.md  CONTAMINATION_CONTROL_FRAMING_W110_V1.md  CONTAMINATION_CONTROL_FRAMING_W111_V1.md  CONTAMINATION_CONTROL_FRAMING_W113_V1.md  CONTAMINATION_CONTROL_FRAMING_W114_V1.md  CONTAMINATION_CONTROL_FRAMING_W119_V1.md  CONTAMINATION_CONTROL_FRAMING_W121_V1.md  CONTAMINATION_CONTROL_FRAMING_W122_V1.md  FRONTIER_RELEVANCE_AUDIT_W101_V1.md  FRONTIER_RELEVANCE_AUDIT_W102_V1.md  FRONTIER_RELEVANCE_AUDIT_W103_V1.md  FRONTIER_RELEVANCE_AUDIT_W105_V1.md  FRONTIER_RELEVANCE_AUDIT_W106_V1.md  FRONTIER_RELEVANCE_AUDIT_W107_V1.md  FRONTIER_RELEVANCE_AUDIT_W109_V1.md  FRONTIER_RELEVANCE_AUDIT_W110_V1.md  FRONTIER_RELEVANCE_AUDIT_W111_V1.md  FRONTIER_RELEVANCE_AUDIT_W112_V1.md  FRONTIER_RELEVANCE_AUDIT_W116_V1.md  FRONTIER_RELEVANCE_AUDIT_W117_V1.md  FRONTIER_RELEVANCE_AUDIT_W118_V1.md  FRONTIER_RELEVANCE_AUDIT_W120_V1.md  FRONTIER_RELEVANCE_AUDIT_W122_V1.md  FRONTIER_RELEVANCE_AUDIT_W125_V1.md  FRONTIER_RELEVANCE_AUDIT_W127_V1.md  FRONTIER_RELEVANCE_AUDIT_W128_V1.md  FRONTIER_RELEVANCE_AUDIT_W129_V1.md  FRONTIER_RELEVANCE_AUDIT_W130_V1.md  FRONTIER_RELEVANCE_AUDIT_W131_V1.md  FRONTIER_RELEVANCE_AUDIT_W132_V1.md  FRONTIER_RELEVANCE_AUDIT_W133_V1.md  (+302 more)
examples/: 01_basic_consensus.py  01_quickstart.py  02_drift_tracking.py  02_quant_desk.py  03_replay_and_audit.py  03_scaling_demo.py  04_local_llm.py  05_real_code_review.py  06_agent_team_api.py  README.md  adk_quickstart.py  agent_team.py  build_with_coordpy.py  scenario_bullish.txt  w50_replay_live.py  w50_smoke_driver.py  w51_replay_live.py  w51_smoke_driver.py  w52_replay_live.py  w52_smoke_driver.py  w53_replay_live.py  w53_smoke_driver.py  w54_replay_live.py  w54_smoke_driver.py  w55_replay_live.py  w55_smoke_driver.py
examples/out_of_tree_plugin/: README.md  pyproject.toml
examples/out_of_tree_plugin/coordpy_markdown_sink/: __init__.py  sink.py
examples/out_of_tree_plugin/wevra_markdown_sink/: __init__.py  sink.py
papers/: categorical_routing.md  context_as_objects.md  context_as_objects.tex  context_as_objects_body.md  coordpy_capsule_native_runtime.md  cross_domain_generalization.md  formal_verification.md  impossibility_results.md  wevra_capsule_native_runtime.md
scripts/: _w104_emit_pilot_result_doc.py  build_w121_exposed_listing_v1.py  colab_frontier_closure_w86.ipynb  colab_gpu_deterministic_substrate_w86.ipynb  colab_moe_substrate_closure_w86.ipynb  colab_w87_multi_modal_substrate.ipynb  fetch_w110_bigcodebench_corpus.py  launch_frontier_closure_vertex.sh  mine_w111_resistant_failure_modes_v1.py  release.sh  run_frontier_closure_w86.py  run_w101_arsenal_mining.py  run_w101_mbpp_plus_pilot.py  run_w101_mbpp_plus_preflight.py  run_w102_code_slice_proposal.py  run_w102_mbpp_plus_v2_pilot.py  run_w102_mbpp_plus_v2_preflight.py  run_w103_humaneval_plus_pilot.py  run_w104_humaneval_plus_cross_scale_pilot.py  run_w104_w105_phase3_slice_pack.py  run_w105_405b_reachability_probe.py  run_w106_margin_cap_dispatch.py  run_w107_405b_reachability_gate.py  run_w107_livecodebench_preflight.py  run_w108_apps_preflight.py  run_w108_livecodebench_pilot.py  run_w108_livecodebench_preflight.py  run_w109_apps_pilot.py  run_w109_apps_preflight.py  run_w110_bigcodebench_pilot.py  run_w110_bigcodebench_preflight.py  run_w112_stronger_model_reachability_sweep_v1.py  run_w113_resistant_pilot.py  run_w113_resistant_slice_preflight.py  run_w113_tier2_readiness_v1.py  run_w114_stronger_model_certification_v1.py  run_w115_frontier_certification_v1.py  run_w116_upstream_admission_v1.py  run_w117_upstream_construction_v1.py  run_w119_icpc_public_construction_v1.py  (+101 more)
tests/: test_adaptive_compression_w50.py  test_adk_wheel_smoke.py  test_autograd_manifold.py  test_branch_cycle_memory_v2_w52.py  test_branch_cycle_memory_w51.py  test_branch_merge_memory_v3_w53.py  test_consensus_quorum_controller_w54.py  test_corruption_robust_carrier_v2_w54.py  test_corruption_robust_carrier_w53.py  test_cross_backend_alignment_w50.py  test_cross_backend_translator_w51.py  test_cross_bank_transfer_w50.py  test_deep_proxy_stack_v2_w51.py  test_deep_proxy_stack_v3_w52.py  test_deep_proxy_stack_v5_w54.py  test_deep_proxy_stack_w50.py  (+268 more)
(+2081 files in other folders)
