[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "coordpy"
version = "0.5.16"
description = "CoordPy — bounded-context orchestration and evaluation SDK (first shipped product from the Context Zero research programme)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Context Zero Contributors" },
]
keywords = [
    "multi-agent",
    "coordination",
    "llm",
    "context",
    "evaluation",
    "swe-bench",
    "bounded-context",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "numpy>=1.23",
]

[project.optional-dependencies]
# Real-LLM path — talks HTTP to a local Ollama instance; no runtime deps.
llm = []
scientific = [
    "scipy>=1.10",
    "networkx>=3.0",
]
crypto = [
    "cryptography>=41.0",
    # galois is optional — the repo ships an inline prime-field GF(p)
    # fallback (core/gf.py); install galois for better performance.
]
dl = [
    "torch>=2.1",
    "peft>=0.7",
]
heavy = [
    "hnswlib>=0.8",
    "transformers>=4.35",
    "RestrictedPython>=7.0",
]
# Docker-first sandbox backend (Slice 2 target — declared here so
# `pip install coordpy[docker]` resolves once the backend lands).
docker = [
    "docker>=6.0",
]
# Multi-node cluster (ASPEN) tooling. Declared as a slot; the
# cluster client itself lives outside this repo.
cluster = []
dev = [
    "black",
    "ruff",
    "mypy",
    "pytest",
]

[project.urls]
Homepage = "https://github.com/adotdong29/context-zero"
Documentation = "https://github.com/adotdong29/context-zero#readme"
Issues = "https://github.com/adotdong29/context-zero/issues"
Changelog = "https://github.com/adotdong29/context-zero/blob/main/CHANGELOG.md"

[project.scripts]
# CoordPy SDK surface — these are the stable, contract-tested entry points.
coordpy = "vision_mvp.coordpy._cli:main_run"
coordpy-import = "vision_mvp.coordpy._cli:main_import"
coordpy-ci = "vision_mvp.coordpy._cli:main_ci"
# Inspect / audit the capsule graph of a finished report (SDK v3).
coordpy-capsule = "vision_mvp.coordpy._cli:main_capsule"
# Research-programme legacy entry point — runs CASR research demos
# (scale/phase/test/info). Retained for continuity with Phase-1..44
# scripts and kept out of the CoordPy SDK contract on purpose. The
# public product CLI is `coordpy`.
casr = "vision_mvp.__main__:main"

[tool.setuptools.packages.find]
include = ["vision_mvp*"]
exclude = ["vision_mvp.tests*"]

[tool.setuptools.package-data]
vision_mvp = ["*.md", "tasks/data/*.jsonl"]
