[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "coordpy-markdown-sink"
version = "0.1.0"
description = "Example out-of-tree CoordPy ReportSink that emits a Markdown digest of a product report."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Context Zero Contributors" },
]
# Intentionally no hard dependency on `coordpy`: this package only needs
# `coordpy` at runtime, and pinning it here would make the exemplar
# brittle across CoordPy versions. The entry_point discovery path works
# as long as both packages are in the same environment.
dependencies = []

[project.entry-points."coordpy.report_sinks"]
# CoordPy calls the registered function once, with no arguments, at
# sink-resolution time. The function must register a factory under a
# stable name via `coordpy.extensions.register_report_sink`.
markdown = "coordpy_markdown_sink.sink:register"

[tool.setuptools.packages.find]
include = ["coordpy_markdown_sink*"]
